--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,102 @@ i {
   color: #F0145A;
 }
 
+.footer {
+  background: #F5F5FA;
+}
+
+.footer__container {
+  margin-top: 1.875rem;
+  margin-bottom: 1.875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.875rem;
+}
+
+.footer__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.625rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__bottom-phone {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #46466E;
+}
+
+.footer__bottom-contact {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #24A3FF;
+}
+
+i {
+  width: 0.375rem;
+  height: 0.375rem;
+  background: #E6E6F0;
+  border-radius: 50%;
+}
+
+.top-footer__info {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.375rem;
+}
+
+.top-footer__location {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #323264;
+}
+
+.top-footer__map {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24A3FF;
+}
+
+.top-footer__dop {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.top-footer__dop2 {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: none;
+}
+
 .page__out {
   background: #F5F5FA;
 }
@@ -449,6 +545,7 @@ i {
 
 .turn__block::after {
   content: "";
+  display: none;
   width: 0.25rem;
   height: 20.125rem;
   background: #E6E6F0;
@@ -521,6 +618,18 @@ i {
   gap: 3.75rem;
 }
 
+@supports (margin-bottom: clamp( 1.875rem , 1.427238806rem  +  2.2388059701vw , 3.75rem )) {
+  .we__block {
+    margin-bottom: clamp( 1.875rem , 1.427238806rem  +  2.2388059701vw , 3.75rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 1.875rem , 1.427238806rem  +  2.2388059701vw , 3.75rem )) {
+  .we__block {
+    margin-bottom: calc(1.875rem + 1.875 * (100vw - 20rem) / 83.75);
+  }
+}
+
 .we__text {
   font-weight: 400;
   font-size: 19px;
@@ -554,6 +663,16 @@ i {
 
 .out__container {
   padding: 1.875rem 0rem 1.875rem 0rem;
+  position: relative;
+}
+
+.out__container::after {
+  content: "";
+  width: 100%;
+  height: 0.1875rem;
+  background: #E6E6F0;
+  position: absolute;
+  bottom: 0;
 }
 
 .out__slider {
@@ -1448,6 +1567,17 @@ button.swiper-pagination-bullet {
   i {
     display: none;
   }
+
+  .footer__bottom {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  i {
+    display: none;
+  }
 }
 
 @media (max-width: 25em) {
@@ -1491,6 +1621,20 @@ button.swiper-pagination-bullet {
 }
 
 @media (max-width: 47.99875em) {
+  .footer__container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .top-footer__dop {
+    display: none;
+  }
+
+  .top-footer__dop2 {
+    display: block;
+  }
+
   .turn__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1506,6 +1650,10 @@ button.swiper-pagination-bullet {
     display: none;
   }
 
+  .turn__block::after {
+    display: block;
+  }
+
   .we__block {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1518,16 +1666,6 @@ button.swiper-pagination-bullet {
     max-width: 100%;
   }
 
-  .out__wrapper {
-    margin-left: 0rem;
-  }
-
-  .out__block {
-    width: 100%;
-  }
-}
-
-@media (max-width: 29.99875em) {
   .out__wrapper {
     margin-left: 0rem;
   }
